--- a/javascript1/ghadi.html
+++ b/javascript1/ghadi.html
@@ -9,18 +9,24 @@
             font-family: 'Clock';
             src: url(./fonts/digital-7\ \(mono\ italic\).ttf);
         }
+        *{
+            background-color: navy;
+
+        }
         #a{
-            font-size: 50px;
+            font-size: 170px;
             font-weight: 900;
             border:5px solid black;
+            background-color: black;
+            color: white;
             display: inline;
-            padding: 15px 20px;
+            padding: 35px 96px;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
             box-shadow: 0 0 20px black;
-            border-radius: 0px 16px 0px 16px;
+            border-radius: 0px 56px 0px 56px;
             font-family: 'clock';
         }
     </style>
@@ -65,7 +71,7 @@
             ghadi=hr+':'+min+':'+sec+meri;
             document.getElementById('a').innerHTML=ghadi;
         }
-        setInterval(clock,1000);
+        setInterval(clock,500);
         
     </script>
 </body>
