--- a/javascript1/string.html
+++ b/javascript1/string.html
@@ -78,8 +78,12 @@
         // document.writeln(a.replaceAll(/god/gi,'Aashik'));
 
         // split 
-        a='Aas+hi+k tha+kur';
-        document.writeln(a.split('+'));
+        // a='Aas+hi+k tha+kur';
+
+        // frequency counter using split
+        // a='banana';
+        // // document.writeln(a.split('+'));
+        // document.write(a.split('a').length-1);
 
     </script>
 </body>
