fix the ghadi.html

--- a/javascript1/ghadi.html
+++ b/javascript1/ghadi.html
@@ -7,12 +7,14 @@
     <style>
         @font-face {
             font-family: 'Clock';
-            src: url(./fonts/digital-7\ \(mono\ italic\).ttf);
+            src: url(./fonts/digital-7\ \(italic\).ttf);
         }
+
         *{
             background-color: navy;
 
         }
+        
         #a{
             font-size: 170px;
             font-weight: 900;
@@ -28,7 +30,9 @@
             box-shadow: 0 0 20px black;
             border-radius: 0px 56px 0px 56px;
             font-family: 'clock';
+            letter-spacing: 10px;
         }
+        
     </style>
 </head>
 <body>
