restructure form validation file

--- a/exam/hjs/h1.html
+++ b/exam/hjs/h1.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Practicing for exam</h1>
     <p>This is dedicated to the semester exams for Web technology</p>
+    <form action="" method="POST">
+        
+    </form>
 </body>
 </html>
