--- a/javascript1/string.html
+++ b/javascript1/string.html
@@ -48,7 +48,7 @@
         
         // a='Aashik thakur';
         // includes
-        // document.writeln(a.includes('Aas'));
+        // document.writeln(a.includes('shik'));
 
         // document.writeln(a.search('tha'));
         // b=a.search('tha');
