--- a/exam/hjs/h1.html
+++ b/exam/hjs/h1.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dynamic Image Swap</title>
+<style>
+  #image-container {
+    width: 300px;
+    height: 400px;
+    border: 2px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  #image-container img {
+    width: 100%;
+    height: auto;
+    transition: opacity 0.3s ease;
+  }
+  button {
+    margin-top: 20px;
+    padding: 10px 15px;
+    font-size: 16px;
+  }
+</style>
 </head>
 <body>
-    <h1>Practicing for exam</h1>
-    <p>This is dedicated to the semester exams for Web technology</p>
-    <form action="" method="POST">
-        
-    </form>
+
+<h2>Dynamic Image Change</h2>
+<div id="image-container">
+  <img id="dynamic-img" src="https://picsum.photos/id/1015/300/400" alt="Image">
+</div>
+<button id="next-image">Next Image</button>
+
+<script>
+const images = [
+  'https://picsum.photos/id/1015/300/400',
+  'https://picsum.photos/id/1016/300/400',
+  'https://picsum.photos/id/1018/300/400',
+  'https://picsum.photos/id/1020/300/400',
+  'https://picsum.photos/id/1024/300/400'
+];
+
+let index = 0;
+const imgElement = document.getElementById('dynamic-img');
+const button = document.getElementById('next-image');
+
+button.addEventListener('click', () => {
+  index = (index + 1) % images.length; // loop back to first
+  imgElement.style.opacity = 0;        // fade out
+  setTimeout(() => {
+    imgElement.src = images[index];    // change image
+    imgElement.style.opacity = 1;      // fade in
+  }, 200);
+});
+</script>
+
 </body>
 </html>
