--- a/exam/hjs/h1.html
+++ b/exam/hjs/h1.html
@@ -8,7 +8,7 @@
   #image-container {
     width: 300px;
     height: 400px;
-    border: 2px solid #ccc;
+    border: 2px solid #09e05f;
     display: flex;
     justify-content: center;
     align-items: center;
