--- a/javascript1/ghadi.html
+++ b/javascript1/ghadi.html
@@ -4,36 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        @font-face {
-            font-family: 'Clock';
-            src: url(./fonts/digital-7\ \(italic\).ttf);
-        }
-
-        *{
-            background-color: navy;
-
-        }
-        
-        #a{
-            font-size: 170px;
-            font-weight: 900;
-            border:5px solid black;
-            background-color: black;
-            color: white;
-            display: inline;
-            padding: 35px 96px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
-            box-shadow: 0 0 20px black;
-            border-radius: 0px 56px 0px 56px;
-            font-family: 'clock';
-            letter-spacing: 10px;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="ghadi.css">
 </head>
 <body>
     <div id="a">
